--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - pip install -r requirements.txt
   - pip install -r test-requirements.txt
 script:
-  - cd tests && ./run-tests.sh
+  - cd tests && ./run_tests.sh
