--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
   - "3.7"
 install:
   - pip install -r requirements.txt
-  - pip install -r test-requirements.txt
+  - pip install -r tests/test-requirements.txt
 script:
   - cd tests && ./run_tests.sh
