--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-asgiref==3.2.1
-Jinja2>=2.10.1
-piccolo>=0.7.2
-pydantic>=1.1.1
+asgiref==3.2.3
+Jinja2==2.10.3
+piccolo==0.7.5
+pydantic==1.1.1
 python-multipart==0.0.5
-starlette>=0.13.0
+starlette==0.13.0
 PyJWT==1.7.1
