--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ install:
   - pip install -r tests/test-requirements.txt
 script:
   - cd tests && ./run_tests.sh
+after_success:
+  - cd .. && coveralls
