--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-asgiref==3.2.7
-Jinja2==2.11.2
-piccolo==0.11.*
-pydantic==1.5.1
+asgiref==3.2.10
+Jinja2==2.11.*
+piccolo>=0.12.1,<0.13
+pydantic==1.6.*
 python-multipart==0.0.5
-starlette==0.13.4
+starlette==0.13.*
 PyJWT==1.7.1
