--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-dist: xenial
+dist: focal
 language: python
 python:
   - "3.7"
+  - "3.8"
+  - "3.9-dev"
 install:
   - pip install -r requirements.txt
   - pip install -r tests/test-requirements.txt
