--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,7 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r test-requirements.txt
+          pip install -r tests/test-requirements.txt
           pip install fastapi
       - name: Test with pytest
         run: cd tests && ./run-tests.sh
