--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -41,5 +41,5 @@ jobs:
       - name: Test with pytest, Postgres
         run: cd tests && ./test-postgres.sh && cd ..
         env:
-          POSTGRES_HOST: postgres
+          PG_HOST: postgres
           PG_DATABASE: postgres
