--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,6 +1,10 @@
-name: Python package
+name: Test Suite
 
-on: [push]
+on:
+  push:
+    branches: ["master"]
+  pull_request:
+    branches: ["master"]
 
 jobs:
     linters:
@@ -16,8 +20,8 @@ jobs:
                   python -m pip install --upgrade pip
                   pip install -r requirements.txt
                   pip install -r tests/test-requirements.txt
-            - name: Flake8
-              run: flake8
+            - name: Lint
+              run: ./scripts/lint.sh
 
     test_postgres:
         runs-on: ubuntu-latest
@@ -55,11 +59,14 @@ jobs:
                   pip install -r requirements.txt
                   pip install -r tests/test-requirements.txt
             - name: Test with pytest, Postgres
-              run: cd tests && ./test-postgres.sh
+              run: ./scripts/test-postgres.sh
               env:
                   PG_HOST: localhost
                   PG_DATABASE: postgres
                   PG_PASSWORD: postgres
+            - name: Upload coverage
+              uses: codecov/codecov-action@v1
+              if: matrix.python-version == '3.7'
 
     test_sqlite:
         runs-on: ubuntu-latest
@@ -79,4 +86,7 @@ jobs:
                   pip install -r requirements.txt
                   pip install -r tests/test-requirements.txt
             - name: Test with pytest, SQLite
-              run: cd tests && ./test-sqlite.sh
+              run: ./scripts/test-sqlite.sh
+            - name: Upload coverage
+              uses: codecov/codecov-action@v1
+              if: matrix.python-version == '3.7'
