--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ module = [
     "uvicorn",
     "jwt",
     "boto3",
-    "moto"
+    "moto",
+    "botocore.config",
 ]
 ignore_missing_imports = true
 
