--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,6 +1,6 @@
 Jinja2>=2.11.0
-piccolo[postgres]>=0.82.0
-pydantic>=1.6
+piccolo[postgres]>=0.89.0
+pydantic[email]>=1.6
 python-multipart>=0.0.5
 fastapi>=0.58.0
 PyJWT>=2.0.0
