--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ line_length = 79
 [[tool.mypy.overrides]]
 module = [
     "asyncpg.pgproto.pgproto",
+    "asyncpg.exceptions",
     "jinja2",
     "uvicorn",
     "jwt",
