test sqlite on more Python versions, and upload coverage for Python 3.11

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -67,13 +67,13 @@ jobs:
                   PG_PASSWORD: postgres
             - name: Upload coverage
               uses: codecov/codecov-action@v1
-              if: matrix.python-version == '3.7'
+              if: matrix.python-version == '3.11'
 
     test_sqlite:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: [3.7, 3.8, 3.9]
+                python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
 
         steps:
             - uses: actions/checkout@v2
@@ -90,4 +90,4 @@ jobs:
               run: ./scripts/test-sqlite.sh
             - name: Upload coverage
               uses: codecov/codecov-action@v1
-              if: matrix.python-version == '3.7'
+              if: matrix.python-version == '3.11'
