--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ module = [
     "moto",
     "botocore",
     "botocore.config",
-    "httpx"
+    "httpx",
+    "qrcode"
 ]
 ignore_missing_imports = true
 
