MFA using an Authenticator app (#292)
* MFA prototype

* add mfa_providers abstract property

* flesh out email provider a bit more

* wip

* flesh out email some more, and add authenticator

* flesh out `AuthenticatorSeed` some more

* add method for fetching pyotp

* add `pyotp` to requirements

* add proper auth methods for pyotp

* start adding tests

* bump minimum Piccolo version

* test `create_new` method

* add qrcode logic from @sinisaos PR

* flesh out auth methods

* lazy load `qrcode`

* fleshing out logic some more in session login endpoint

* change imports

* make error messages consistent

* add TODO

* adding example app for testing

* add `AuthenticatorProvider` to example app

* added `get_registration_html` to provider

* rename `seed_table` to `secret_table`

* change params in `send_code` for authenticator

* Create README.md

* add `issuer_name` to `AuthenticatorProvider`

* fix typo in docstring

* add `get_registration_json`

* add `get_registration_json` to base class

* try embedding QR code image in HTML response

* flesh out `MFARegisterEndpoint` endpoint

* add todo about primary key

* fix bugs in register endpoint

* fix error - was returning html instead of json

* show MFA code input on login page

* Update README.md

* Update tests.yaml

* fix some linter errors

* add `device_name` column to `AuthenticatorSecret`

* make sure each provider has a custom token name

* make each MFA Provider have a unique token name

This means we can potentially put several MFA providers on the login page

* If the user reused a code make sure auth fails (could be a replay attack)

* add auth test for replay attacks

* add `generate_recovery_code`

* store recovery codes, and return recovery codes in endpoints (taken from @sinisaos example)

* make sure recovery codes can be used to login

* ignore mypy warnings for now

* install pyotp in CI

* endpoi

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -21,6 +21,9 @@ jobs:
                   pip install -r requirements/requirements.txt
                   pip install -r requirements/dev-requirements.txt
                   pip install -r requirements/test-requirements.txt
+                  pip install -r requirements/extras/authenticator.txt
+                  pip install -r requirements/extras/pynacl.txt
+
             - name: Lint
               run: ./scripts/lint.sh
 
@@ -59,6 +62,8 @@ jobs:
                   python -m pip install --upgrade pip
                   pip install -r requirements/requirements.txt
                   pip install -r requirements/test-requirements.txt
+                  pip install -r requirements/extras/authenticator.txt
+                  pip install -r requirements/extras/pynacl.txt
             - name: Test with pytest, Postgres
               run: ./scripts/test-postgres.sh
               env:
@@ -86,6 +91,8 @@ jobs:
                   python -m pip install --upgrade pip
                   pip install -r requirements/requirements.txt
                   pip install -r requirements/test-requirements.txt
+                  pip install -r requirements/extras/authenticator.txt
+                  pip install -r requirements/extras/pynacl.txt
             - name: Test with pytest, SQLite
               run: ./scripts/test-sqlite.sh
             - name: Upload coverage
